--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.max-idle=5
 spring.datasource.min-idle=0
 
 
-mybatis.config-location=classpath\:mybatis-config.xml 
-mybatis.mapper-locations=classpath\:mybatis/mapper/*Mapper.xml  
+<!--mybatis.config-location=classpath\:mybatis-config.xml -->
+<!--mybatis.mapper-locations=classpath\:mybatis/mapper/*Mapper.xml --> 
 
 <!--服务端口-->
 <!--server.port=80-->
